# Virtual-Pet-Simulator

./: CMakeLists.txt  README.md  main.cpp
includes/: pet.h  utils.h
saves/: mirri1  musti1
src/: CMakeLists.txt  pet.cpp  utils.cpp
tests/: CMakeLists.txt  test_main.cpp
